--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -4,7 +4,7 @@
 
 		<!-- Result search, Pub, Halacha -->
 		<section>
-			<div class="container"> -->
+			<div class="container">
 
 				<!-- Halacha -->
 				<aside class="wid20pc floatR">
