--- a/src/views/pages/synagogue.ejs
+++ b/src/views/pages/synagogue.ejs
@@ -100,7 +100,7 @@
 
 									<% if (synagogue.data.tefilot[0][0]) { %>
 
-									<ul class="mar0-20 pad0-10 borR floatR">
+									<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% synagogue.data.tefilot[0].forEach(item => { %>
 												
@@ -140,7 +140,7 @@
 										<% }); %>
 									</ul>
 									<% } else { %>
-										<p class="wid400 marR-20 pad0-10 borR floatR fs-13 ta-c">הרשימה ריקה</p>
+										<p class="wid400 marR-20 pad0-10 borR-bl-3 floatR fs-13 ta-c">הרשימה ריקה</p>
 									<% } %>
 
 									<div class="clear"></div>
@@ -162,7 +162,7 @@
 
 									<% if (synagogue.data.tefilot[1][0]) { %>
 
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 	
 											<% synagogue.data.tefilot[1].forEach(item => { %>
 													
@@ -202,7 +202,7 @@
 										<% }); %>
 									</ul>
 									<% } else { %>
-										<p class="wid400 marR-20 pad0-10 borR floatR fs-13 ta-c">הרשימה ריקה</p>
+										<p class="wid400 marR-20 pad0-10 borR-bl-3 floatR fs-13 ta-c">הרשימה ריקה</p>
 									<% } %>
 
 									<div class="clear"></div>
@@ -225,7 +225,7 @@
 
 									<% if (synagogue.data.tefilot[2][0]) { %>
 
-									<ul class="mar0-20 pad0-10 borR floatR">
+									<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% synagogue.data.tefilot[2].forEach(item => { %>
 												
@@ -265,7 +265,7 @@
 										<% }); %>
 									</ul>
 									<% } else { %>
-										<p class="wid400 marR-20 pad0-10 borR floatR fs-13 ta-c">הרשימה ריקה</p>
+										<p class="wid400 marR-20 pad0-10 borR-bl-3 floatR fs-13 ta-c">הרשימה ריקה</p>
 									<% } %>
 
 									<div class="clear"></div>
@@ -295,7 +295,7 @@
 
 									<% if (synagogue.data.tefilot[3][0]) { %>
 
-									<ul class="mar0-20 pad0-10 borR floatR">
+									<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 	
 										<% synagogue.data.tefilot[3].forEach(item => { %>
 												
@@ -331,7 +331,7 @@
 										<% }); %>
 									</ul>
 									<% } else { %>
-										<p class="wid400 marR-20 pad0-10 borR floatR fs-13 ta-c">הרשימה ריקה</p>
+										<p class="wid400 marR-20 pad0-10 borR-bl-3 floatR fs-13 ta-c">הרשימה ריקה</p>
 									<% } %>
 
 									<div class="clear"></div>
@@ -353,7 +353,7 @@
 
 									<% if (synagogue.data.tefilot[4][0]) { %>
 
-									<ul class="mar0-20 pad0-10 borR floatR">
+									<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% synagogue.data.tefilot[4].forEach(item => { %>
 												
@@ -389,7 +389,7 @@
 										<% }); %>
 									</ul>
 									<% } else { %>
-										<p class="wid400 marR-20 pad0-10 borR floatR fs-13 ta-c">הרשימה ריקה</p>
+										<p class="wid400 marR-20 pad0-10 borR-bl-3 floatR fs-13 ta-c">הרשימה ריקה</p>
 									<% } %>
 
 									<div class="clear"></div>
@@ -411,7 +411,7 @@
 
 									<% if (synagogue.data.tefilot[5][0]) { %>
 
-									<ul class="mar0-20 pad0-10 borR floatR">
+									<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% synagogue.data.tefilot[5].forEach(item => { %>
 												
@@ -447,7 +447,7 @@
 										<% }); %>
 									</ul>
 									<% } else { %>
-										<p class="wid400 marR-20 pad0-10 borR floatR fs-13 ta-c">הרשימה ריקה</p>
+										<p class="wid400 marR-20 pad0-10 borR-bl-3 floatR fs-13 ta-c">הרשימה ריקה</p>
 									<% } %>
 
 									<div class="clear"></div>
@@ -469,7 +469,7 @@
 
 									<% if (synagogue.data.tefilot[6][0]) { %>
 
-									<ul class="mar0-20 pad0-10 borR floatR">
+									<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% synagogue.data.tefilot[6].forEach(item => { %>
 												
@@ -505,7 +505,7 @@
 										<% }); %>
 									</ul>
 									<% } else { %>
-										<p class="wid400 marR-20 pad0-10 borR floatR fs-13 ta-c">הרשימה ריקה</p>
+										<p class="wid400 marR-20 pad0-10 borR-bl-3 floatR fs-13 ta-c">הרשימה ריקה</p>
 									<% } %>
 
 									<div class="clear"></div>
