--- a/src/views/pages/synagogueManager.ejs
+++ b/src/views/pages/synagogueManager.ejs
@@ -131,7 +131,7 @@
 										
 										</div>
 										
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% if (synagogue.data.tefilot[0][0]) { %>
 											<% synagogue.data.tefilot[0].forEach(item => { %>
@@ -207,7 +207,7 @@
 										
 										</div>
 										
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% if (synagogue.data.tefilot[1][0]) { %>
 											<% synagogue.data.tefilot[1].forEach(item => { %>
@@ -281,7 +281,7 @@
 										
 										</div>
 										
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% if (synagogue.data.tefilot[2][0]) { %>
 											<% synagogue.data.tefilot[2].forEach(item => { %>
@@ -363,7 +363,7 @@
 										
 										</div>
 										
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% if (synagogue.data.tefilot[3][0]) { %>
 											<% synagogue.data.tefilot[3].forEach(item => { %>
@@ -432,7 +432,7 @@
 										
 										</div>
 
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% if (synagogue.data.tefilot[4][0]) { %>
 											<% synagogue.data.tefilot[4].forEach(item => { %>
@@ -502,7 +502,7 @@
 										
 										</div>
 
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% if (synagogue.data.tefilot[5][0]) { %>
 											<% synagogue.data.tefilot[5].forEach(item => { %>
@@ -571,7 +571,7 @@
 										
 										</div>
 
-										<ul class="mar0-20 pad0-10 borR floatR">
+										<ul class="mar0-20 pad0-10 borR-bl-3 floatR">
 
 										<% if (synagogue.data.tefilot[6][0]) { %>
 											<% synagogue.data.tefilot[6].forEach(item => { %>
