--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -135,7 +135,11 @@
     <div class="toTop"><i class="fa fa-arrow-up"></i></div>
 
     <script type="module" src="/js/app.js"></script>
-    <script src="/js/modules/jquery.js"></script>
+    <!-- <script src="/js/modules/jquery.js"></script> -->
+    <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzixLXCXnqK5EIoh3ydBBzp-0ltX3EhjA&libraries=places"></script>
+    
 
     <script>
         nagishli_config = {
