--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,14 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="/assets/img/site/ShurtLogo.png" />
 		<title><%= pageTitle %> - תפילה טיים</title>
+		<link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
 		<link rel="stylesheet" href="/css/style.css">
-        <script src="https://kit.fontawesome.com/1406b0d971.js"></script>
+		<script src="https://kit.fontawesome.com/1406b0d971.js"></script>
         
         <link href='https://unpkg.com/@fullcalendar/core@4.4.2/main.min.css' rel='stylesheet' />  
         <link href='https://unpkg.com/@fullcalendar/daygrid@4.4.2/main.min.css' rel='stylesheet' />
         <script src='https://unpkg.com/@fullcalendar/core@4.4.2/main.min.js'></script>
         <script src='https://unpkg.com/@fullcalendar/daygrid@4.4.2/main.min.js'></script>
-        <link href="/css/hebcal-styles.css" rel="stylesheet">
+		<link href="/css/hebcal-styles.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -35,9 +36,9 @@
 					</li>
 
 					<li class="pad5-10 borL bor-gr col-gy-b li_form-city">
-						<form id="form-city" action="" method="GET">
+						<form id="form-city">
 							<i class="fas fa-map-marker-alt"></i>
-							<input type="text" name="city" placeholder="הכנס עיר" value="<%= zmanim.location.city %>, <%= zmanim.location.country %>" data-israel="<%= zmanim.israel %>" />
+							<input id="form-dity_input" type="text" name="city" placeholder="הכנס עיר" value="<%= zmanim.location.city %>, <%= zmanim.location.country %>" data-israel="<%= zmanim.israel %>" />
 						</form>
 					</li>
 
