--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="/assets/img/site/ShurtLogo.png" />
 		<title><%= pageTitle %> - תפילה טיים</title>
-		<link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/ui-lightness/jquery-ui.css">
 		<link rel="stylesheet" href="/css/style.css">
 		<script src="https://kit.fontawesome.com/1406b0d971.js"></script>
         
