--- a/src/views/partials/navBar&search&connexion.ejs
+++ b/src/views/partials/navBar&search&connexion.ejs
@@ -52,7 +52,7 @@
 
             <li class="borR bor-w menu1">
 
-                <a href="/search/tefila?tefila=all&city=<%= zmanim.location.city %>" class="pad10-20 col-w c-yw_h">
+                <a href="/search/tefila?tefila=all&city=<%= zmanim.week.location.city %>" class="pad10-20 col-w c-yw_h">
                     <i class="fas fa-torah"></i>
                     תפילות
                 </a>
@@ -61,7 +61,7 @@
                     <ul>
                         
                         <li class="bc-gy-xl_h menu2_h">
-                            <a href="/search/tefila?tefila=week&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                            <a href="/search/tefila?tefila=week&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                 חול
                                 <i class="fas fa-angle-left marR-25 floatL"></i>
                             </a>
@@ -70,19 +70,19 @@
                                 <ul>
 
                                     <li class="bc-gy-xl_h">
-                                        <a href="/search/tefila?tefila=1&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                                        <a href="/search/tefila?tefila=1&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                             שחרית
                                         </a>
                                     </li>
 
                                     <li class="bc-gy-xl_h">
-                                        <a href="/search/tefila?tefila=2&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                                        <a href="/search/tefila?tefila=2&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                             מנחה
                                         </a>
                                     </li>
 
                                     <li class="bc-gy-xl_h">
-                                        <a href="/search/tefila?tefila=3&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                                        <a href="/search/tefila?tefila=3&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                             ערבית
                                         </a>
                                     </li>
@@ -92,7 +92,7 @@
                         </li>
 
                         <li class="bc-gy-xl_h menu2_h">
-                            <a href="/search/tefila?tefila=shabbat&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                            <a href="/search/tefila?tefila=shabbat&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                 שבת
                                 <i class="fas fa-angle-left marR-25 floatL"></i>
                             </a>
@@ -101,25 +101,25 @@
                                 <ul>
                                     
                                     <li class="bc-gy-xl_h">
-                                        <a href="/search/tefila?tefila=4&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                                        <a href="/search/tefila?tefila=4&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                             מנחה ער"ש
                                         </a>
                                     </li>
 
                                     <li class="bc-gy-xl_h">
-                                        <a href="/search/tefila?tefila=5&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                                        <a href="/search/tefila?tefila=5&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                             שחרית
                                         </a>
                                     </li>
 
                                     <li class="bc-gy-xl_h">
-                                        <a href="/search/tefila?tefila=6&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                                        <a href="/search/tefila?tefila=6&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                             מנחה
                                         </a>
                                     </li>
 
                                     <li class="bc-gy-xl_h">
-                                        <a href="/search/tefila?tefila=7&city=<%= zmanim.location.city %>" class="pad10-20 block col-blu">
+                                        <a href="/search/tefila?tefila=7&city=<%= zmanim.week.location.city %>" class="pad10-20 block col-blu">
                                             ערבית מוצא"ש
                                         </a>
                                     </li>
