--- a/src/views/pages/account.ejs
+++ b/src/views/pages/account.ejs
@@ -45,12 +45,12 @@
                     הוסף בית כנסת
                 </a>
 
-                <a href="" class="btn-box c-yw_h mar15">
+                <a href="javascript:void(0);" class="btn-box c-yw_h mar15 soon">
                     <i class="fas fa-plus marL10"></i>
                     הוסף בית הוראה
                 </a>
 
-                <a href="" class="btn-box c-yw_h mar15">
+                <a href="javascript:void(0);" class="btn-box c-yw_h mar15 soon">
                     <i class="fas fa-plus marL10"></i>
                     הוסף שיעורים מקוונים
                 </a>
