--- a/src/views/pages/synagogue.ejs
+++ b/src/views/pages/synagogue.ejs
@@ -34,7 +34,7 @@
 							
 						</div>
 							
-						<div class="floatL marT60">
+						<div class="bk-rite-sm floatL marT60">
 
 							<h4 class="mar10 fs-20">
 								נוסח 
@@ -59,11 +59,11 @@
 				<nav class="synagogue-header">
 					<ul>
 						<li class="ta-c col-w borL wid150 pad10-0 point bc-gy-l_h actif">
-							לו"ז תפילות
+							לו"ז <br class="disp-b-sm" >תפילות
 						</li>
 
 						<li class="ta-c col-w borL wid150 pad10-0 point bc-gy-l_h">
-							לו"ז שיעורים
+							לו"ז <br class="disp-b-sm" >שיעורים
 						</li>
 
 						<li class="ta-c col-w wid150 pad10-0 point bc-gy-l_h">
@@ -73,7 +73,7 @@
 					<hr>
 				</nav>
 
-				<div>
+				<div class="synagogue-container">
 					<div class="wid800 floatR">
 
 						<!-- Times tfilot -->
@@ -652,7 +652,7 @@
 
 						</div>
 
-						<div class="marT60">
+						<div class="paypal marT60">
 
 							<h3 class="col-w pad5 marB0">
 								תרומה לבית כנסת
@@ -689,7 +689,7 @@
 			<!-- Infos synagogue & map -->
 			<div class="container">
 
-				<div class="wid800 mar-auto">
+				<div class="bk-infos wid800 mar-auto">
 					<nav class="floatR">
 
 						<h4 class="fs-20 bold">
@@ -743,8 +743,8 @@
 
 					</nav>
 
-					<div class="floatL">
-						<iframe src="https://www.google.com/maps?q=<%= synagogue.detail.latitude %>,<%= synagogue.detail.longitude %>&amp;output=embed" width="500" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					<div class="map floatL">
+						<iframe src="https://www.google.com/maps?q=<%= synagogue.detail.latitude %>,<%= synagogue.detail.longitude %>&amp;output=embed" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 					</div>
 
 					<div class="clear"></div>
