--- a/src/views/pages/synagogueManager.ejs
+++ b/src/views/pages/synagogueManager.ejs
@@ -34,7 +34,7 @@
 							
 						</div>
 							
-						<div class="floatL marT60">
+						<div class="bk-rite-sm floatL marT60">
 
 							<h4 class="mar10 fs-20">
 								נוסח 
